# JEWELLERY1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
JEWELLERY1/: manage.py
JEWELLERY1/JEWELLERY1/: asgi.py  settings.py  urls.py  wsgi.py
JEWELLERY1/templates/: index.html
